--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <a href="#skills" class="text-gray-300 hover:text-white transition-all duration-300 hover:scale-105">Skills</a>
         <a href="#projects" class="text-gray-300 hover:text-white transition-all duration-300 hover:scale-105">Projects</a>
         <a href="#playground" class="text-gray-300 hover:text-white transition-all duration-300 hover:scale-105">Playground</a>
-        <a href="#contact" class="px-5 py-2 bg-gradient-to-r from-blue-400 via-cyan-400 to-pink-500 text-white rounded-full font-medium shadow-[0_0_20px_rgba(34,211,238,0.8)] hover:shadow-[0_0_30px_rgba(236,72,153,0.9)] transition-all duration-300 hover:scale-110">
+        <a href="#contact" class="px-5 py-2  bg-[linear-gradient(90deg,#00F0FF_0%,#5200FF_50%,#FF00F5_100%)] text-white rounded-full font-medium  shadow-[0_0_20px_rgba(34,211,238,0.8)] transition-all duration-300 hover:scale-110">
            Contact</a>
       </div>
 
@@ -113,13 +113,13 @@
     <a href="#skills" class="mobile-nav-item">Skills</a>
     <a href="#projects" class="mobile-nav-item">Projects</a>
     <a href="#playground" class="mobile-nav-item">Playground</a>
-     <a href="#contact" class="px-5 py-2 bg-gradient-to-r from-green-400 via-blue-400 to-pink-500 text-white rounded-full font-medium shadow-[0_0_20px_rgba(34,211,238,0.8)] hover:shadow-[0_0_30px_rgba(236,72,153,0.9)] transition-all duration-300 hover:scale-110">
+     <a href="#contact" class="px-5 py-2  bg-[linear-gradient(90deg,#00F0FF_0%,#5200FF_50%,#FF00F5_100%)] text-white rounded-full font-medium shadow-[0_0_20px_rgba(34,211,238,0.8)] transition-all duration-300 hover:scale-110">
            Contact</a>
   </div>
 </div>
 
         <!-- Hero Section -->
-<section id="home" aria-labelledby="hero-heading" class="min-h-screen flex items-center justify-center relative overflow-hidden bg-gray-900 px-4 sm:px-6 pt-24 pb-32 isolate">
+   <section id="home" aria-labelledby="hero-heading" class="min-h-screen flex items-center justify-center relative overflow-hidden bg-gray-900 px-4 sm:px-6 pt-24 pb-32 isolate">
     <!-- Grid background pattern -->
     <div class="absolute inset-0 bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-[size:24px_24px]"></div>
 
@@ -736,7 +736,7 @@ class _TempleViewScreenState extends State<TempleViewScreen> {
                             <textarea id="message" name="message" rows="5" required class="w-full px-4 py-3 bg-gray-800/50 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-white resize-none"></textarea>
                         </div>
                         <div>
-                            <button type="submit" id="submit-btn" class="w-full bg-gradient-to-r from-blue-500 to-purple-600 text-white py-3 rounded-lg font-medium hover:shadow-lg transition-all duration-300 hover:scale-105">
+                            <button type="submit" id="submit-btn" class="w-full  bg-[linear-gradient(90deg,#00F0FF_0%,#5200FF_50%,#FF00F5_100%)] text-white py-3 rounded-lg font-medium transition-all duration-300 hover:scale-105">
                                 Send Message <i class="fas fa-paper-plane ml-2"></i>
                             </button>
                             <div id="form-notification" class="mt-3 text-center hidden"></div>
@@ -884,7 +884,7 @@ class _TempleViewScreenState extends State<TempleViewScreen> {
     </footer>
 
         <script src="/globe.js"></script>
-        <script  type="module" src="/app.js"></script>
+        <script  type="module" src="app.js"></script>
     
 </body>
     </html>   
