--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 
     <!--  3D Background Container -->
-    <!-- <div id="threejs-container"></div>  -->
+    <!-- <div id="threejs-container"> -->
     <div id="particles-js"></div> 
     
     <!-- Animated Cursor -->
