--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
      <!-- <link rel="canonical" href="https://jeevag-portfolio.netlify.app/"> --> 
       <meta name="apple-mobile-web-app-status-bar" content="#202125"> 
       <title>Jeeva G | Portfolio</title>
-       <link rel="stylesheet" href="./src/css/style.css">
-        <link rel="stylesheet" href="./src/css/tailwind.css">
-         <link rel="stylesheet" href="./src/css/globe.css" />
+       <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/tailwind.css">
+         <link rel="stylesheet" href="./css/globe.css" />
          
 
           <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico"> 
@@ -725,10 +725,9 @@
             </div>
         </div>
     </footer>
-    <script   type="module" src="./src/js/globe.js"></script>
-   <script type="module" src="./src/js/app.js"></script>
-   <script  type="module"  src="./src/js/dhws-data-injector.js"></script>
-  
+    <script   type="module" src="./js/globe.js"></script>
+   <script type="module" src="./js/app.js"></script>
+<script id="dhws-dataInjector" src="/dhws-data-injector.js"></script>
 </body>
     </html>   
        
