--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta name="description" content="Jeeva G's Portfolio: Flutter & Web Developer, UI/UX Designer. Explore animated backgrounds, interactive coding games, stunning project showcases, and seamless mobile-friendly design built with Three.js and Tailwind CSS. Get in touch for collaborations or hiring!">
      <meta name="robots" content="index, follow"> 
-     <!-- <link rel="canonical" href="https://jeevag-portfolio.netlify.app/"> --> 
+     <link rel="canonical" href="https://jeevag-portfolio.netlify.app/"> 
       <meta name="apple-mobile-web-app-status-bar" content="#202125"> 
       <title>Jeeva G | Portfolio</title>
        <link rel="stylesheet" href="./css/style.css">
@@ -178,7 +178,7 @@
                 <!-- Holographic projection -->
                 <div class="absolute inset-4 flex items-center justify-center overflow-hidden rounded-lg">
                     <div class="relative w-full h-full">
-                        <img src="./src/Assets/pic.JPG" 
+                        <img src="./Assets/pic.JPG" 
                              alt=" Profile" 
                              class="absolute inset-0 w-full h-full object-cover rounded-lg grayscale hover:grayscale-0 transition-all duration-500"
                             fetchpriority="high"
@@ -445,9 +445,9 @@
       <div class="relative min-h-80 bg-gradient-to-br from-blue-900/40 to-purple-900/40 flex items-center justify-center">
         <div class="relative z-10 p-8">
           <picture>
-            <source srcset="./src/Assets/temple finder.avif 1x" type="image/avif">
-            <source srcset="./src/Assets/temple finder.webp 1x" type="image/webp">
-            <img src="./src/Assets/temple finder.png" 
+            <source srcset="./Assets/temple finder.avif 1x" type="image/avif">
+            <source srcset="./Assets/temple finder.webp 1x" type="image/webp">
+            <img src="./Assets/temple finder.png" 
                  alt="Screenshot of Temple Finder App showing panoramic temple view" 
                  class="rounded-xl shadow-2xl max-h-64 mx-auto"
                  loading="lazy" decoding="async" width="400" height="256">
@@ -486,9 +486,9 @@
       <div class="relative min-h-80 bg-gradient-to-br from-purple-900/40 to-pink-900/40 flex items-center justify-center order-1 md:order-2">
         <div class="relative z-10 p-8">
           <picture>
-            <source srcset="./src/Assets/nfctag.avif 1x" type="image/avif">
-            <source srcset="./src/Assets/nfctag.webp 1x" type="image/webp">
-            <img src="./src/Assets/nfctag.png" 
+            <source srcset="./Assets/nfctag.avif 1x" type="image/avif">
+            <source srcset="./Assets/nfctag.webp 1x" type="image/webp">
+            <img src="./Assets/nfctag.png" 
                  alt="NFC Tag Reader app screenshot" 
                  class="rounded-xl shadow-2xl max-h-64 mx-auto"
                  loading="lazy" decoding="async" width="400" height="256">
@@ -527,9 +527,9 @@
       <div class="relative min-h-80 bg-gradient-to-br from-red-900/40 to-orange-900/40 flex items-center justify-center">
         <div class="relative z-10 p-8">
           <picture>
-            <source srcset="./src/Assets/movieapp.avif 1x" type="image/avif">
-            <source srcset="./src/Assets/movieapp.webp 1x" type="image/webp">
-            <img src="./src/Assets/movieapp.png" 
+            <source srcset="./Assets/movieapp.avif 1x" type="image/avif">
+            <source srcset="./Assets/movieapp.webp 1x" type="image/webp">
+            <img src="./Assets/movieapp.png" 
                  alt="Movie Discovery App interface" 
                  class="rounded-xl shadow-2xl max-h-64 mx-auto"
                  loading="lazy" decoding="async" width="400" height="256">
