--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"></noscript> 
             <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+             <meta name="google-site-verification" content="XoVZSrMHvgfzqk4yTp19PjXZw3mGzX0YUJqGlf2AFSw" />
 </head>
 <body class="text-gray-100 [scrollbar-width:none] [-ms-overflow-style:none]">
 
