--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,17 @@
             <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
              <meta name="google-site-verification" content="XoVZSrMHvgfzqk4yTp19PjXZw3mGzX0YUJqGlf2AFSw" />
+
+             <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YJ9BV6TLPB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YJ9BV6TLPB');
+</script>
+
 </head>
 <body class="text-gray-100 [scrollbar-width:none] [-ms-overflow-style:none]">
 
