--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  <html lang="en"> 
   <head> <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description" content="Jeeva G's Portfolio: Flutter & Web Developer, UI/UX Designer. Explore animated backgrounds, interactive coding games, stunning project showcases, and seamless mobile-friendly design built with Three.js and Tailwind CSS. Get in touch for collaborations or hiring!">
+    <meta name="description" content="Jeeva G's Portfolio: Flutter & Web Developer, UI/UX Designer.">
      <meta name="robots" content="index, follow"> 
      <link rel="canonical" href="https://jeevag-portfolio.netlify.app/"> 
       <meta name="apple-mobile-web-app-status-bar" content="#202125"> 
